--- a/word2vec-umap.ipynb
+++ b/word2vec-umap.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,16 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save w2v features\n",
+    "#train_data.to_csv(\"w2v_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,10 +426,10 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, figsize=(14, 10))\n",
-    "plt.scatter(*umap_emb.T, s=0.3, c=train_data.target, cmap='Spectral', alpha=1.0)\n",
+    "plt.scatter(*umap_emb.T, s=3, c=train_data.target, cmap='Spectral', alpha=1.0)\n",
     "plt.setp(ax, xticks=[], yticks=[])\n",
     "ax.patch.set_facecolor('black')\n",
-    "fg_color = 'white'\n",
+    "fg_color = 'black'\n",
     "cbar = plt.colorbar()\n",
     "plt.setp(plt.getp(cbar.ax.axes, 'yticklabels'), color=fg_color)"
    ]
@@ -447,7 +448,7 @@
    "outputs": [],
    "source": [
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    arr_w2v, train_data.target, test_size=0.05, random_state=42)"
+    "    arr_w2v, train_data.target.values, test_size=0.10, random_state=42)"
    ]
   },
   {
@@ -541,6 +542,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#train_data.standard_error.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mse(y_val, y_pred) #0.44 not bad, let's see on test :) "
    ]
   },
@@ -549,6 +559,139 @@
    "metadata": {},
    "source": [
     "### Augmenting W2V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take a look at the cosine similarity\n",
+    "#cosine_similarity(v_1.reshape(1,-1), v_2.reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment_train_w2v(X_train, y_train, times = 5):\n",
+    "    \n",
+    "    augmented_w2v_X = X_train.copy()\n",
+    "    augmented_w2v_y = y_train.copy()\n",
+    "    \n",
+    "    for j in range(0, times - 1):\n",
+    "        for i in range(0, X_train.shape[0]):\n",
+    "        \n",
+    "            new_w2v = X_train[i,:] + np.random.uniform(1,8)*1e-3*np.random.randn(300)       # np.random.uniform(1,8)*1e-3*np.random.randn(300)\n",
+    "            augmented_w2v_X = np.vstack((augmented_w2v_X, new_w2v))\n",
+    "            \n",
+    "            new_y = y_train[i] +  np.random.choice([-1,1])*0.10 #*0.5\n",
+    "            augmented_w2v_y = np.append(augmented_w2v_y, new_y)\n",
+    "        \n",
+    "    return augmented_w2v_X, augmented_w2v_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug_X_train, aug_Y_train = augment_train_w2v(X_train, y_train, times = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unison_shuffled_copies(a, b):\n",
+    "    assert len(a) == len(b)\n",
+    "    p = np.random.permutation(len(a))\n",
+    "    return a[p], b[p]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug_X_train, aug_Y_train = unison_shuffled_copies(aug_X_train, aug_Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = GradientBoostingRegressor(random_state=0)\n",
+    "reg.fit(aug_X_train, aug_Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = reg.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse(y_val, y_pred) #0.44 not bad, let's see on test :) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper_2 = umap.UMAP(n_neighbors= 15, n_components = 2,min_dist = 0.1, target_metric = 'l1' , n_epochs = 1000).fit_transform(aug_X_train, y=aug_Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, figsize=(14, 10))\n",
+    "plt.scatter(*mapper_2.T, s=3, c=aug_Y_train, cmap='Spectral', alpha=1.0)\n",
+    "plt.setp(ax, xticks=[], yticks=[])\n",
+    "ax.patch.set_facecolor('black')\n",
+    "fg_color = 'black'\n",
+    "cbar = plt.colorbar()\n",
+    "plt.setp(plt.getp(cbar.ax.axes, 'yticklabels'), color=fg_color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper_2.shape"
    ]
   },
   {
